Updated subtitles edition

--- a/Filtrowanie.html
+++ b/Filtrowanie.html
@@ -190,7 +190,8 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem119.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Filtrowanie pozwala na użycie wielu elementów filtrowania na raz. Gdy pozahaczamy interesujące nas elementy wybieramy "Filtruj" w menu by potwierdzić filtrowanie. Zahaczanie poszczególnych elementów menu nie powoduje jego znikania, dzięki czemu możemy od razu wybrać co nas interesuje bez konieczności wielokrotnego otwierania menu.</span></p>
+<p class="rvps2"><span class="rvts6">Filtrowanie pozwala na użycie wielu elementów filtrowania naraz. Gdy pozahaczamy interesujące nas elementy, wybieramy "Filtruj" w menu, by potwierdzić filtrowanie. </span></p>
+<p class="rvps2"><span class="rvts6">Zahaczanie poszczególnych elementów menu nie powoduje jego znikania, dzięki czemu możemy od razu wybrać co nas interesuje bez konieczności wielokrotnego otwierania menu.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Opis poszczególnych funkcji:</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -199,15 +200,15 @@
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
-<li class="rvps2"><span class="rvts6">Filtruj po wczytaniu napisów - zahaczenie powoduje nakładanie ustawionego filtru na każde nowo otwarte napisy, w przypadku stylów gdy one się nie pokrywają to nic nie zostaje ukryte, lista wcześniej wybranych stylów zmienia się dopiero, gdy dokonamy nowego wyboru stylów, wtedy wszystkie które nie istnieją zostają usunięte.</span></li>
+<li class="rvps2"><span class="rvts6">Filtruj po wczytaniu napisów - zahaczenie powoduje nakładanie ustawionego filtru na każde nowo otwarte napisy, w przypadku stylów, gdy one się nie pokrywają, to nic nie zostaje ukryte. Lista wcześniej wybranych stylów zmienia się dopiero, gdy dokonamy nowego wyboru stylów, wtedy wszystkie, które nie istnieją zostają usunięte.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
-<li class="rvps2"><span class="rvts6">Filtrowanie odwrócone - pozwala zamienić ukrywanie na pokazywanie, w sensie gdy wybierzemy np. zaznaczenia to pokaże nam tylko zaznaczone linijki itd.</span></li>
+<li class="rvps2"><span class="rvts6">Filtrowanie odwrócone - pozwala zamienić ukrywanie na pokazywanie, w sensie gdy wybierzemy np. zaznaczenia, to pokaże nam tylko zaznaczone linijki itd.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
-<li class="rvps2"><span class="rvts6">Nie resetuj wcześniejszego filtrowania - pozwala na dodawanie ukrytych linijek do tego co już jest ukryte. Gdy jest wyłączone każde filtrowanie przywraca wcześniej ukryte linijki.</span></li>
+<li class="rvps2"><span class="rvts6">Nie resetuj wcześniejszego filtrowania - pozwala na dodawanie ukrytych linijek do tego, co już jest ukryte. Gdy jest wyłączone, każde filtrowanie przywraca wcześniej ukryte linijki.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
