--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             
             data-openlvl="1"
         >
-            <ul><li><a href="Edycjanapisow.html" data-related='[]'>EditBox</a></li><li><a href="Pracazwideo.html" data-related='[{"title":"Praca z wideo","url":"Pracazwideo.html"},{"title":"Edycja napisów","url":"Edycjanapisow.html"}]'>FFMS2</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Grid</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Menu pola napisów</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Obsługiwane formaty</a></li><li><a href="Pracazaudio.html" data-related='[]'>Pole audio</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Pole edycji linii</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Pole napisów</a></li></ul>
+            <ul><li><a href="Edycjanapisow.html" data-related='[]'>EditBox</a></li><li><a href="Pracazwideo.html" data-related='[{"title":"Praca z wideo","url":"Pracazwideo.html"},{"title":"Edycja napisów","url":"Edycjanapisow.html"}]'>FFMS2</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Grid</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Menu pola napisów</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Obsługiwane formaty</a></li><li><a href="Pracazaudio.html" data-related='[]'>Pole audio</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Pole edycji linii</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Pole napisów</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Przeł</a></li></ul>
         </div>
       </div>  <!-- /index-->
       
