--- a/Conowego.html
+++ b/Conowego.html
@@ -184,10 +184,14 @@
                 
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Co nowego?</span></span></h1>
-<p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.1.???</span></p>
+<p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.2.831</span></p>
 <p class="rvps2"><span class="rvts14"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
 <li class="rvps2"><span class="rvts6">Wiele innych drobnych poprawek, których tu nie wymieniłem zarówno bardzo starych jak i powstałych po dodaniu filtrowania.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Wielokrotne przyspieszone spektrum audio, u mnie przykładowo z 7fps w pełnym oknie do 33-40fps, wszystko zależy od tego, gdzie audio jest zapisane, bo jeśli na dysk, to sam odczyt z dysku może spowalniać. Użycie RAMu ograniczyłem, by nie dopuścić, aby po zapisaniu całego przetworzonego audio program używał aż do 9GB pamięci w najgorszych przypadkach.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
