What's new and move one subs to another descriptions fixes.

--- a/Przenoszenietekstujednychnapisow.html
+++ b/Przenoszenietekstujednychnapisow.html
@@ -13,7 +13,7 @@
 
   <title>Przenoszenie tekstu jednych napis&oacute;w do drugich</title>
   <meta name="description" content="" /> 
-  <meta name="keywords" content="">
+  <meta name="keywords" content="cadobre">
 
 
 
@@ -199,18 +199,25 @@
 <p class="rvps2"><span class="rvts6">To okno daje spore możliwości przesuwania obu kolumn, zarówno kolumny Tekst jak i Tekst tłumaczenia.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps6"><span class="rvts17">Opcje przesuwania kolumny Tekst tłumaczenia:</span></p>
-<p class="rvps2"><span class="rvts17">W górę usuń tłumaczenie</span><span class="rvts6"> - przenosi tekst tłumaczenia w górę, usuwając tekst z przesuniętej linijki, gdy chcemy przesunąć w górę o kilka linijek wystarczy że zaznaczymy w pierwszej linię dokąd ma być ona przesunięta, a w drugiej linię od której zaczynamy przesuwać.</span></p>
+<p class="rvps2"><span class="rvts17">Usuń linię</span><span class="rvts6"> - przenosi tekst tłumaczenia w górę, usuwając tekst z przesuniętej linijki, gdy chcemy przesunąć w górę o kilka linijek wystarczy że zaznaczymy w pierwszej linię dokąd ma być ona przesunięta, a w drugiej linię od której zaczynamy przesuwać.</span></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem25.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps6"><span class="rvts6">Po wciśnięciu przycisku przesunie nam "Sprawiasz, że cię nienawidzę..." do linijki z "You make me hate you so much"</span></p>
-<p class="rvps6"><span class="rvts17">W dół zostaw pole puste</span><span class="rvts6"> - przesuwa tekst tłumaczenia w dół od pierwszej zaznaczonej linijki do drugiej zaznaczonej bądź o jedno pole, gdy takowej nie ma.</span></p>
-<p class="rvps6"><span class="rvts17">W górę złącz tłumaczenie</span><span class="rvts6"> - Podobne do pierwszej opcji z taką różnicą, że tłumaczenie nie zostaje usunięte, a dołączone do siebie ze znakami podziału linii \N.</span></p>
+<p class="rvps6"><span class="rvts6"><br/></span></p>
+<p class="rvps6"><span class="rvts17">Dodaj linię</span><span class="rvts6"> - przesuwa tekst tłumaczenia w dół od pierwszej zaznaczonej linijki do drugiej zaznaczonej bądź o jedno pole, gdy takowej nie ma.</span></p>
+<p class="rvps6"><span class="rvts6"><br/></span></p>
+<p class="rvps6"><span class="rvts17">Złącz linie</span><span class="rvts6"> - podobne do pierwszej opcji z taką różnicą, że tłumaczenie nie zostaje usunięte, a dołączone do siebie ze znakami podziału linii \N.</span></p>
 <p class="rvps6"><span class="rvts27"><br/></span></p>
 <p class="rvps6"><span class="rvts17">Opcje przesuwania kolumny Tekst (oryginał):</span></p>
-<p class="rvps6"><span class="rvts17">W górę złącz oryginał</span><span class="rvts6"> - dobre w przypadku gdy w oryginale rozbito wypowiedź na dwie linie a w tłumaczeniu jest jedna.</span></p>
-<p class="rvps6"><span class="rvts17">W górę usuń oryginał</span><span class="rvts6"> - dobre, gdy w oryginale są jakieś dodatkowe wypowiedzi albo opisy których nie mamy w tłumaczeniu a chcemy je usunąć.</span></p>
-<p class="rvps6"><span class="rvts17">W dół</span><span class="rvts6"> - dobre gdy w tłumaczeniu jest jakiś tekst którego nie ma w oryginale a chcemy go zostawić, dodaje wtedy dodatkową linijkę, którą należy stimingować samemu.</span></p>
+<p class="rvps6"><span class="rvts17">Złącz linie</span><span class="rvts6"> - przesuwa tekst oryginału w górę i łączy cały tekst od pierwszej zaznaczonej linii do drugiej. </span></p>
+<p class="rvps6"><span class="rvts6">Dobre w przypadku, gdy w oryginale rozbito wypowiedź na dwie linie a w tłumaczeniu jest jedna.</span></p>
+<p class="rvps6"><span class="rvts6"><br/></span></p>
+<p class="rvps6"><span class="rvts17">Usuń linię</span><span class="rvts6"> - podobnie jak w pierwszym przypadku tyle że zamiast łączyć linie to je usuwa. </span></p>
+<p class="rvps6"><span class="rvts6">Dobre, gdy w oryginale są jakieś dodatkowe wypowiedzi albo opisy których nie mamy w tłumaczeniu a chcemy je usunąć.</span></p>
+<p class="rvps6"><span class="rvts6"><br/></span></p>
+<p class="rvps6"><span class="rvts17">Dodaj linię</span><span class="rvts6"> - dodaje pustą linię, przesuwa tekst oryginału w dół. </span></p>
+<p class="rvps6"><span class="rvts6">Dobre, gdy w tłumaczeniu jest jakiś tekst którego nie ma w oryginale, a chcemy go zostawić, dodaje wtedy dodatkową linijkę, którą należy stimingować samemu.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Przy odrobinie szczęścia i wprawy można całe napisy dopasować w czasie pół godziny albo krótszym, no chyba, że jedne napisy robił jakiś maniak złączania / dzielenia linijek.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
