--- a/Conowego.html
+++ b/Conowego.html
@@ -184,6 +184,96 @@
                 
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Co nowego?</span></span></h1>
+<p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.2.858</span></p>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawka rysowania czasów na pasku czasów audio, dzięki czemu czasy nie powinny już nigdy się nakładać na siebie.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Naprawione niedziałające wstawianie tagów przy pierwszym ruchu narzędzi wizualnych obrotów i skalowania.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane automatyczna zmiana linii przy przechodzeniu do następnej linii i kursorem przy włączonym porównywaniu.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawiony niedziałający podgląd zmiany wielkości czcionki w oknie zmiany czcionki.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodany czas w nazwie zrzutów ekranu zapisanych do PNG.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodana obsługa tagu &lt;br&gt; przy konwersji z SRT na inny format, a także obsługa konwersji z SRT na MDVD, MPL2 i TMP, a także z nich na format SRT i inne konwersje między tymi formatami.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawione ciągłe wyskakiwanie dialogu, że nie znaleziono więcej błędów pisowni.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodana możliwość umieszczenia włączania/wyłączania indeksowania na pasek narzędzi.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawione ukrywanie jednej zakładki, po kliknięciu w pierwszy albo ostatni piksel.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodanie czasu na pełny ekran, bardzo przydatne, przy korzystaniu z pełnego ekranu na drugim monitorze, można wtedy normalnie z wideo pracować.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Zmieniony przycisk konfiguracji przycisków tagów, dzięki czemu ikona nie będzie się dłużej rozlatywać po rozciąganiu/zwężaniu okna. </span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodana możliwość przestawienia paska narzędzi na dowolny bok.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawiony crash po zamknięciu wszystkich zakładek, gdy dwie zakładki są widoczne i ponownym zaczytaniu napisów.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawione zmienianie szukanego słowa, gdy pojawiał się dialog z informacją odnośnie ilości zmian bądź, że podana fraza nie została znaleziona. Poprawiony także brak czyszczenia błędów pisowni, co powodowało nieprawidłowe rysowanie.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane otwieranie wielu plików na raz z otwórz napisy i otwórz wideo.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawione wczytywanie napisów TMP, za każdym razem pojawiała się informacja, że format niepoprawny i traktowało jako ASS.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"> </span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane do kolekcjonera czcionek moje pole tekstowe obsługujące koloryzację, co wyeliminowało kolejny element niepodatny na zmianę motywu.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawione otwieranie dwóch menu na raz w przypadku zepsutej myszki powodującej trójklik prawego przycisku, pozostające menu powodowało crasha przy próbie odwołania. A także poprawione klikanie prawym, teraz każde kliknięcie powoduje przemieszczenie menu w miejsce kliknięcia.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Przyspieszenie obliczania łamań w polu tekstowym dzięki czemu kilkadziesiąt tysięcy linijek z błędem automatyzacji nie powoduje zwiechy.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawiony crash przy otwarciu okna zmiany rozdzielczości napisów bez wideo.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawiony błąd porównywania na dwóch widocznych zakładkach.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawiony błąd braku klatki wideo i wykresu audio po odpaleniu programu z obsługą DirectX na pełnym ekranie.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
 <p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.2.831</span></p>
 <p class="rvps2"><span class="rvts14"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
@@ -193,7 +283,7 @@
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
 <li class="rvps2"><span class="rvts6">Wielokrotne przyspieszone spektrum audio, u mnie przykładowo z 7fps w pełnym oknie do 33-40fps, wszystko zależy od tego, gdzie audio jest zapisane, bo jeśli na dysk, to sam odczyt z dysku może spowalniać. Użycie RAMu ograniczyłem, by nie dopuścić, aby po zapisaniu całego przetworzonego audio program używał aż do 9GB pamięci w najgorszych przypadkach.</span></li>
 </ul>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6"> </span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
 <li class="rvps2"><span class="rvts6">Dodany zapis otwartego wideo i audio do napisów i pytanie o wznowienie przy ich ponownym otworzeniu z taką różnicą, że pyta tylko o istniejące pliki.</span></li>
 </ul>
