What's new for public release

--- a/Conowego.html
+++ b/Conowego.html
@@ -13,7 +13,7 @@
 
   <title>Co nowego?</title>
   <meta name="description" content="" /> 
-  <meta name="keywords" content="">
+  <meta name="keywords" content="wy,s">
 
 
 
@@ -184,6 +184,90 @@
                 
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Co nowego?</span></span></h1>
+<p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.3.917</span></p>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawione upuszczanie plików, które obejmuje obecnie całą zakładkę i pasek zakładek.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawione usuwanie cache audio, a także w przypadku crasha przy wczytywaniu, </span></li>
+</ul>
+<p class="rvps2"><span class="rvts6">zamknięciu zakładki przed zakończeniem wczytywania audio zaczyta audio ponownie.</span></p>
+<p class="rvps2"><span class="rvts6">Nie będzie wczytywać niepełnego pliku audio.</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawiony crash po rozciągnięciu wykresu audio na półtoragodzinnym wideo.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodany przycisk odtwarzania całej linijki, gdy jest włączony podział karaoke.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane skróty audio do pola napisów.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Naprawione złe rysowanie błędów pisowni / porównania, gdy w dialogu znajduje się tabulator.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane wstawianie zaznaczonego tekstu w pole zamień w oknie szukaj zmień.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawiony brak odświeżania statycznego pola z przyciskami radio przy dezaktywacji.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawiony brak zmiany koloru dezaktywacji okna głównego.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane podświetlanie tych samych słów po dwukrotnym kliknięciu na słowo.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodana koloryzacja template w polu tekstowym.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawiony crash przy użyciu skrótów do przesuwania co klatkę bez wczytanego wideo.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawione kasowanie znaków czasu po zaznaczeniu i użyciu klawiszy numpada.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane pokazywanie brakujących nawiasów tagów ASS w napisach i w polu tekstowym.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Ukrywanie paska narzędzi wizualnych na pełnym ekranie, gdy edytor jest wyłączony.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Dodane włączanie/wyłączanie zapisu napisów z nazwą wideo do menu.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawione tworzenie podziału karaoke, obecnie nie usuwa tagów w tekście, niezależnie od ich położenia.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawiony crash po przełączeniu zakładki, gdy na jednej zakładce jest postprocesor a na drugiej przesuwanie czasów.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawione działające skróty globalne, które nie powinny działać, bo w menu są w danym momencie wyłączone.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
+<li class="rvps2"><span class="rvts6">Poprawiona zmiana matrixa na tv.601 przy wczytywaniu napisów i wideo.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts14">Lista poprawek w wersji 0.9.3.893</span></p>
 <p class="rvps2"><span class="rvts14"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
@@ -191,7 +275,7 @@
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
-<li class="rvps2"><span class="rvts6">Poprawione złe rysowanie niektórych elementów, np obwódki porównania, czy kursora i zacznaczenia w polach tekstowych, a także przy podziale karaoke.</span></li>
+<li class="rvps2"><span class="rvts6">Poprawione złe rysowanie niektórych elementów, np obwódki porównania, czy kursora i zaznaczenia w polach tekstowych, a także przy podziale karaoke.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
